# mage_hackathon

./: .gitignore  pyproject.toml
